--- a/wordle2/styles.css
+++ b/wordle2/styles.css
@@ -12,13 +12,13 @@ html, body {
     flex-wrap: wrap;
 }
 
-#header {
+#header-wordle {
     height: 50px;
     width: 100%;
     padding-top: 10px;
 }
 
-h1 {
+#header-wordle h1 {
     font-family: 'Courier New', Courier, monospace;
     color: white;
     font-size: 30px;
@@ -50,6 +50,20 @@ h1 {
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+}
+
+#row-letters {
+    position: absolute;
+    height: 87px;
+    padding-left: 60px;
+    top: 162px;
+    font-family: 'Courier New', Courier, monospace;
+    color: black;
+    font-size: 60px;
+    text-align: center;
+    font-weight: lighter;
+    margin: 0;
+    letter-spacing: 62.5px;
 }
 
 .row1 {
